added link for github to html page

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         </div>
       </div>
     </div>
+    <a href="https://github.com/alanarama/My-Weather-App2">Link to Github</a>
     <script src="src/script.js"></script>
   </body>
 </html>
