--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <a href="https://github.com/alanarama/My-Weather-App2" class="gitHub">Link to Github</a>
+    <P><a href="https://github.com/alanarama/My-Weather-App2" class="gitHub">Open-source code</a>, by Alana Groves </P>
     <script src="src/script.js"></script>
   </body>
 </html>
