updated link to github

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </div>
     </div>
-    <P><a href="https://github.com/alanarama/My-Weather-App2" class="gitHub">Open-source code</a>, by Alana Groves </P>
+   <a href="https://github.com/alanarama/My-Weather-App2" class="gitHub">Open-source code</a>
     <script src="src/script.js"></script>
   </body>
 </html>
