--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     />
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
- <link rel="stylesheet" href="src/style.css">
+ 
     <script
     src="https://kit.fontawesome.com/3f2efdf1ae.js"
     crossorigin="anonymous"
   ></script>
+  <link href="src/style.css">
     <title>Weather Wireframe</title>
   </head>
 
