--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     src="https://kit.fontawesome.com/3f2efdf1ae.js"
     crossorigin="anonymous"
   ></script>
-  <link href="src/style.css">
+<link rel="stylesheet" href="src/style.css">
     <title>Weather Wireframe</title>
   </head>
 
