--- a/index.html
+++ b/index.html
@@ -76,8 +76,28 @@
   </div>
 
 </div>
+
+<div class="weather-forecast">
+  <div class="row">
+<div class="col-2">
+<div class="weather-forecast-date">
+Thur
+</div>
+<img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="" width="36"/>
+<div class="weather-forecast-temperatures">
+<span class="weather-forecast-temperature-max"> 18°</span>
+<span class="weather-forecast-temperature-min"> 12°</span>
+</div>
 </div>
   </div>
+</div>
+
+
+
+
+</div>
+  </div>
+  
   <small class="footer">
       <a href="https://github.com/alanarama/My-Weather-App2" class="gitHub">Open-source code</a> by Alana Groves
   </small>
