--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
         </div>
   </div>
   
-  <div class="col-6">
+  <div class="col-2">
     <ul>
-
       <li> 
         Humidity: <span id="humidity"></span>%
       </li>
@@ -74,26 +73,9 @@
       </li>
     </ul>
   </div>
-
 </div>
 
-<div class="weather-forecast" id="forecast">
-  <div class="row">
-<div class="col-2">
-<div class="weather-forecast-date">
-Thur
-</div>
-<img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="" width="36"/>
-<div class="weather-forecast-temperatures">
-<span class="weather-forecast-temperature-max"> 18°</span>
-<span class="weather-forecast-temperature-min"> 12°</span>
-</div>
-</div>
-  </div>
-</div>
-
-
-
+<div class="weather-forecast" id="forecast"></div>
 
 </div>
   </div>
