--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="Clear" id="icon" />
           <div>
             <strong id="temperature">12</strong
-            ><span class="units"><a href="#" id="celsius-link">°C </a>|<a href="#" id="fahrenheit-link">°F </a></span>
+            ><span class="units">°C </span>
           </div>
         </div>
   </div>
